<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="enter_phone_number">Phone number to lookup</string>
    <string name="phone_number_hint">Phone number</string>
    <string name="perform_lookup_label">Lookup CallerID</string>
    <string name="app_name">CallerID</string>
    <string name="app_description">The CallerID app uses a web service to look up CallerID information when a call is received from a number not in the address book.</string>
    <string name="lookup_error">Error performing lookup</string>
    <string name="lookup_unknown">Unknown</string>
    <string name="lookup_private">Private</string>
    <string name="lookup_payphone">Payphone</string>
    <string name="lookup_no_result">No data available</string>
    <string name="lookup_in_progress">Please wait…</string>
    <string name="create_contact">Add Contact</string>
    <string name="call">Call</string>
    
    <string name="default_lookup_url"><![CDATA[http://callerid.integralblue.com/callerid.php?format=json&num={number}&country={agentCountry}]]></string>
    
    <string name="app_home_url"><![CDATA[http://www.integralblue.com/callerid-for-android/]]></string>
    
    <string name="missed_call_from_known">Missed call from {0}</string>
    <string name="missed_call_from_unknown">Missed call</string>
    
    <string name="missed_call">Missed call</string>
    
    <string name="default_popup_map">true</string>
    
    <string name="new_version_dialog_title">There is a new version of CallerID available.</string>
    <string name="new_version_dialog_upgrade_button_text">Upgrade</string>
    <string name="new_version_dialog_not_now_button_text">Not now</string>
    <string name="new_version_dialog_never_button_text">Never</string>
    <string name="new_version_unknown_signature">Please upgrade the application using the same method you used to install it.</string>
    
    <!-- to get the signature MD5, open the apk, extract /META-INF/<whatever>.RSA, then run keytool -list <whatever>.RSA -->
    <string name="integralblue_signature_md5">0F43DA02C06C900890B9D7BBB3406F01</string>
    
    <string name="incoming_call_tts">Call from %s</string>
    <string name="incoming_call_tts_unknown">Call from an unknown number</string>
    <string name="incoming_call_tts_private">Call from a private number</string>
    <string name="incoming_call_tts_payphone">Call from a payphone</string>
</resources>
