<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/main_layout_root" android:orientation="vertical"
	android:layout_width="fill_parent" android:layout_height="fill_parent">
	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/enter_phone_number" />
	<EditText android:id="@+id/phone_number" android:hint="@string/phone_number_hint"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:inputType="phone" />
	<Button android:id="@+id/perform_lookup" android:layout_height="wrap_content"
		android:text="@string/perform_lookup_label"
		android:layout_width="fill_parent">
	</Button>
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="horizontal"
		android:layout_width="fill_parent" android:layout_height="wrap_content">
		<ImageButton android:id="@+id/create_contact"  android:visibility="gone"
			android:layout_height="wrap_content"
			android:src="@drawable/create_contact"
			android:contentDescription="@string/create_contact"
			android:layout_width="wrap_content" />
		<ImageButton android:id="@+id/call" android:visibility="gone"
			android:layout_height="wrap_content"
			android:src="@drawable/call"
			android:contentDescription="@string/call"
			android:layout_width="wrap_content" />
	</LinearLayout>	
	<include
		layout="@layout/toast"
		android:layout_weight="1" />
</LinearLayout>
